--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                                                                     height="25" width="25"></a>
                 <a href="https://scholar.google.com/citations?user=F_yEpGIAAAAJ&hl=en"><img src="figures/google_scholar.jpeg" alt="Google Scholar"
                                                                                             height="24" width="24"></a>
-                <a href="https://scholar.google.com/citations?user=F_yEpGIAAAAJ&hl=en"><img src="figures/github.jpeg" alt="Github"
+                <a href="https://github.com/cgxuvector?tab=repositories"><img src="figures/github.jpeg" alt="Github"
                                                                                             height="24" width="24"></a>
             </td>
         </tr>
@@ -100,7 +100,7 @@
 
                     <p>
                         <center>
-                            Chengguang XU, Christopher Amato and Lawson L.S. Wong. In the <i> Proceedings of the
+                    <b>Chengguang Xu</b>, Christopher Amato and Lawson L.S. Wong. In the <i> Proceedings of the
                     Conference on Robot Learning</i> (<b>CoRL-20</b>), November 2020.
                             <a href="https://corlconf.github.io/corl2020/paper_442/", style="color:darkolivegreen">[paper, code, and video]</a>
                         </center>
@@ -130,7 +130,7 @@
 
                     <p>
                     <center>
-                        Chengguang XU and Ehsan Elhamifar. In the Proceedings of the <i> Thirty-Third Conference on Neural
+                    <b>Chengguang Xu</b> and Ehsan Elhamifar. In the Proceedings of the <i> Thirty-Third Conference on Neural
                     Information Processing Systems </i> (<b>NeurIPS-19</b>),
                         December 2019. <a href="https://openreview.net/pdf?id=B1gaN4Hg8H", style="color:darkolivegreen">[Paper]</a>
                     </center>
@@ -160,7 +160,7 @@
 
                     <p>
                     <center>
-                    Wenyu Li, Feng Duan, Shili Sheng, Chengguang Xu, Rensong Liu, Zhiwen Zhang, Xue Jiang. In the <i> IEEE Transactions on Cognitive and Developmental Systems</i>, October 2017.
+                    Wenyu Li, Feng Duan, Shili Sheng, <b>Chengguang Xu</b>, Rensong Liu, Zhiwen Zhang, Xue Jiang. In the <i> IEEE Transactions on Cognitive and Developmental Systems</i>, October 2017.
                     <a href="https://ieeexplore.ieee.org/abstract/document/8082510", style="color:darkolivegreen">[paper]</a>
                     </center>
                     </p>
@@ -192,7 +192,7 @@
 
                     <p>
                     <center>
-                    Chengguang Xu, Wenyu Li, Jeffrey Too Chuan Tan, Zengqiang Chen, Han Zhang, Feng Duan.
+                    <b>Chengguang Xu</b>, Wenyu Li, Jeffrey Too Chuan Tan, Zengqiang Chen, Han Zhang, Feng Duan.
                     In the <i>Twenty-29th Chinese Control And Decision Conference</i> (<b>CCDC-17</b>), May 2017.
                     <a href="https://www.researchgate.net/profile/Chengguang-Xu/publication/318695036_Developing_an_identity_recognition_low-cost_home_service_robot_based_on_turtlebot_and_ROS/links/5a3226da0f7e9b2a282d59c8/Developing-an-identity-recognition-low-cost-home-service-robot-based-on-turtlebot-and-ROS.pdf", style="color:darkolivegreen">[paper]</a>
 
