--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
 </head>
 <body>
 <div class="wrapper">
-    <table style="width:800px;">
+    <table style="width:1500px;">
         <tbody>
         <tr>
-            <td ><img src="profile/profile_img.jpeg" style="width:120px; height:170px"></td>
+            <td ><img src="profile/profile_img.jpeg" style="width:240px; height:340px"></td>
             <td valign="TOP" align="RIGHT">
-                <h2>Chengguang Xu</h2>
-                <b>Ph.D. Candidate</b><br>
-                &nbsp; <b>Khoury College of Computer Sciences</b><b><br>
-                Northeastern University</b><br>
+                <h2 style="font-size: 70px">Chengguang Xu</h2>
+                <b style="font-size: 26px">Ph.D. Candidate</b><br>
+                &nbsp; <b style="font-size: 26px">Khoury College of Computer Sciences</b>
+                <b style="font-size: 26px"><br>Northeastern University</b><br>
                 <p class="logo-text">
                 </p>
                 <a href="https://www.linkedin.com/in/chengguang-xu-2322171b7/"><img src="figures/linkedin.png" alt="Linkedin"
-                                                                                    height="25" width="25"></a>
+                                                                                    height="50" width="50"></a>
                 <a href="https://scholar.google.com/citations?user=F_yEpGIAAAAJ&hl=en"><img src="figures/google_scholar.jpeg" alt="Google Scholar"
-                                                                                            height="24" width="24"></a>
+                                                                                            height="48" width="48"></a>
                 <a href="https://github.com/cgxuvector?tab=repositories"><img src="figures/github.jpeg" alt="Github"
-                                                                                            height="24" width="24"></a>
+                                                                                            height="48" width="48"></a>
             </td>
         </tr>
         </tbody>
@@ -90,21 +90,23 @@
             <tr>
                 <td>
                     <br />
-                    <img src="figures/hierarchical_nav_corl20.png" class="center", height="120", width="320" />
+                    <img src="figures/hierarchical_nav_corl20.png" class="center", height="180", width="420" />
                 </td>
                 <td>
                     <center>
+                    <p>
                         <a href="https://arxiv.org/pdf/2106.03665.pdf" style="color:black"><b>Hierarchical Robot Navigation
                             in Novel Environments using Rough 2-D Maps</b></a><br />
+                    </p>
                     </center>
 
-                    <p>
-                        <center>
+                    <center>
+                        <p>
                     <b>Chengguang Xu</b>, Christopher Amato and Lawson L.S. Wong. In the <i> Proceedings of the
                     Conference on Robot Learning</i> (<b>CoRL-20</b>), November 2020.
                             <a href="https://corlconf.github.io/corl2020/paper_442/", style="color:darkolivegreen">[paper, code, and video]</a>
-                        </center>
-                    </p>
+                        </p>
+                    </center>
                     <p>
                         <br /><u>Description:</u> Given the rough 2-D map of an unseen maze, a dynamic topological
                         map is first initialized from it. During navigation, the dynamic topological map proposes a local map
@@ -120,21 +122,24 @@
             <tr>
                 <td>
                     <br />
-                    <img src="figures/SupFL.png" class="center", height="180", width="320" />
+                    <img src="figures/SupFL.png" class="center", height="180", width="420" />
                 </td>
                 <td>
                     <center>
+                        <p>
                         <a href="https://arxiv.org/pdf/2106.03665.pdf" style="color:black"><b>Deep Supervised Summarization:
                             Algorithm and Application to Learning Instructions</b></a><br />
+                        </p>
                     </center>
 
-                    <p>
                     <center>
+                        <p>
                     <b>Chengguang Xu</b> and Ehsan Elhamifar. In the Proceedings of the <i> Thirty-Third Conference on Neural
                     Information Processing Systems </i> (<b>NeurIPS-19</b>),
                         December 2019. <a href="https://openreview.net/pdf?id=B1gaN4Hg8H", style="color:darkolivegreen">[Paper]</a>
+                        </p>
                     </center>
-                    </p>
+
                     <p>
                         <br /><u>Description:</u> We addressed the problem of supervised subset selection by generalizing the facility location to learn
                         from ground-truth summaries. We considered an efficient sparse optimization of the uncapacitated
@@ -150,20 +155,23 @@
             <tr>
                 <td>
                     <br />
-                    <img src="figures/bci_vision_fusion.png" class="center", height="120", width="320" />
+                    <img src="figures/bci_vision_fusion.png" class="center", height="180", width="420" />
                 </td>
                 <td>
                     <center>
+                        <p>
                         <a href="https://arxiv.org/pdf/2106.03665.pdf" style="color:black"><b>A human-vehicle
                             collaborative simulated driving system based on hybrid brain–computer interfaces and computer vision</b></a><br />
+                        </p>
                     </center>
 
-                    <p>
                     <center>
+                        <p>
                     Wenyu Li, Feng Duan, Shili Sheng, <b>Chengguang Xu</b>, Rensong Liu, Zhiwen Zhang, Xue Jiang. In the <i> IEEE Transactions on Cognitive and Developmental Systems</i>, October 2017.
                     <a href="https://ieeexplore.ieee.org/abstract/document/8082510", style="color:darkolivegreen">[paper]</a>
+                        </p>
                     </center>
-                    </p>
+
                     <p>
                         <br /><u>Description:</u> Automatic driving vehicles have been developed to provide more convenient and comfortable driving experiences.
                         However, these vehicles failed in satisfying the variance of human intentions. Recently, the strategy of collaborating brain-computer
@@ -181,23 +189,25 @@
                 <td>
                     <br />
                     <center>
-                    <img src="figures/turtlebot_ccdc.png" class="center", height="260", width="200" />
+                    <img src="figures/turtlebot_ccdc.png" class="center", height="400", width="300" />
                     </center>
                 </td>
                 <td>
                     <center>
+                        <p>
                         <a href="https://www.researchgate.net/profile/Chengguang-Xu/publication/318695036_Developing_an_identity_recognition_low-cost_home_service_robot_based_on_turtlebot_and_ROS/links/5a3226da0f7e9b2a282d59c8/Developing-an-identity-recognition-low-cost-home-service-robot-based-on-turtlebot-and-ROS.pdf" style="color:black"><b>Developing an identity
                             recognition low-cost home service robot based on turtlebot and ROS</b></a><br />
+                        </p>
                     </center>
 
-                    <p>
                     <center>
+                    <p>
                     <b>Chengguang Xu</b>, Wenyu Li, Jeffrey Too Chuan Tan, Zengqiang Chen, Han Zhang, Feng Duan.
                     In the <i>Twenty-29th Chinese Control And Decision Conference</i> (<b>CCDC-17</b>), May 2017.
                     <a href="https://www.researchgate.net/profile/Chengguang-Xu/publication/318695036_Developing_an_identity_recognition_low-cost_home_service_robot_based_on_turtlebot_and_ROS/links/5a3226da0f7e9b2a282d59c8/Developing-an-identity-recognition-low-cost-home-service-robot-based-on-turtlebot-and-ROS.pdf", style="color:darkolivegreen">[paper]</a>
-
-                    </center>
                     </p>
+                    </center>
+
                     <p>
                         <br /><u>Description:</u> Aging population and disabled assistance have become serious social problems these years. However, it is
                         impossible to make sure that every old people has a caregiver. Therefore, the home service robot is a good method to
